@@ -1,5 +1,8 @@
 2002-07-02  Per Bothner  <per@bothner.com>
 
+	* kawa/standard/string_append.java (stringAppend$V):  Remove
+	needless toString - which also make it null-safe.
+
 	* kawa/standard/ScmEnv.java:  Remove unneeded (and harmful) import.
 
 2002-06-26  Per Bothner  <per@bothner.com>
